--- a/TheBugNet6/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TheBugNet6/Areas/Identity/Pages/Account/Register.cshtml
@@ -17,6 +17,17 @@
                 <label asp-for="Input.Email"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+
+             @*Mathieu ajoute ça (.NET5 to .NET6)*@
+            <div class="form-floating">
+                <label asp-for="Input.FirstName" class="form-control"></label>
+                <input asp-for="Input.FirstName" class="form-label" />
+            </div>
+             <div class="form-floating">
+                <label asp-for="Input.LastName" class="form-control"></label>
+                <input asp-for="Input.LastName" class="form-label" />
+            </div>
+
             <div class="form-floating">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.Password"></label>
