--- a/TheBugNet6/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TheBugNet6/Areas/Identity/Pages/Account/Register.cshtml
@@ -22,10 +22,12 @@
             <div class="form-floating">
                 <label asp-for="Input.FirstName" class="form-control"></label>
                 <input asp-for="Input.FirstName" class="form-label" />
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
             </div>
              <div class="form-floating">
                 <label asp-for="Input.LastName" class="form-control"></label>
                 <input asp-for="Input.LastName" class="form-label" />
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
 
             <div class="form-floating">
